--- a/FABF/services/templates/register/index.html
+++ b/FABF/services/templates/register/index.html
@@ -85,19 +85,19 @@
                             <label for="gender" class="form-label">Sélectionnez votre sexe</label>
                             <div class="btn-group" role="group">
                                         <input type="radio" class="btn-check" name="gender" value="0" id="radiogender0" autocomplete="off" checked>
-                                        <label class="btn btn-outline-primary py-2" for="radiogender0">Masculin</label>
+                                        <label class="btn btn-outline-success py-2" for="radiogender0">Masculin</label>
 
                                         <input type="radio" class="btn-check" name="gender" value="1" id="radiogender1" autocomplete="off" >
-                                        <label class="btn btn-outline-primary py-2" for="radiogender1">Féminin</label>
+                                        <label class="btn btn-outline-success py-2" for="radiogender1">Féminin</label>
                             </div>
                         </div>
                         
                         
                         <div class="col-12">
-                        <button class="btn btn-primary w-100" type="submit">Créer un compte</button>
+                        <button class="btn btn-success w-100" type="submit">Créer un compte</button>
                         </div>
                         <div class="col-12">
-                        <p class="small mb-0">Avez-vous déjà un compte? <a href="/login">Connectez-vous</a></p>
+                        <p class="small mb-0">Avez-vous déjà un compte? <a href="/login" class="text-success">Connectez-vous</a></p>
                         </div>
                     </form>
 
