--- a/FABF/services/templates/login/index.html
+++ b/FABF/services/templates/login/index.html
@@ -43,13 +43,13 @@
                     </div>
 
                     <div class="col-12 mt-5 d-flex justify-content-center mx-2">
-                      <button class="btn btn-primary" type="submit">Se connecter</button>
+                      <button class="btn btn-success" type="submit">Se connecter</button>
                     </div>
                     <div class="col-12">
-                      <p class="small mb-0 d-flex justify-content-center"> <a href="/passwordForgotten"> Mot de passe oublié ?</a></p>
+                      <p class="small mb-0 d-flex justify-content-center"> <a href="/passwordForgotten" class="text-success"> Mot de passe oublié ?</a></p>
                     </div>
                     <div class="col-12">
-                      <p class="small mb-0 text-center">N'avez-vous pas de compte ? <a href="/register">Créer son compte</a></p>
+                      <p class="small mb-0 text-center">N'avez-vous pas de compte ? <a href="/register" class="text-success">Créer son compte</a></p>
                     </div>
                   </form>
 
