--- a/FABF/services/templates/base.html
+++ b/FABF/services/templates/base.html
@@ -33,18 +33,33 @@
 <body>
     {% block header %}
         <header>
-                <nav class="navbar navbar-expand-md mb-4 text-bg-info">
+                <nav class="navbar navbar-expand-md mb-4 text-bg-success">
                     <div class="container-fluid">
-                        <a class="navbar-brand" href="/">FABF</a>
+                        <a class="navbar-brand fs-3 ms-2" href="/">FABF</a>
 
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
 
                         <div class="collapse navbar-collapse me-4 d-flex justify-content-end"  id="navbarCollapse">
+                            <ul class="navbar-nav me-2 d-flex justify-content-end">
+                                <li class="nav-item me-2">
+                                    <a class="nav-link text-light" href="#accueil">Accueil</a>
+                                </li>
+                                <li class="nav-item me-2">
+                                    <a class="nav-link text-light" href="#services">Services</a>
+                                </li>
+                                <li class="nav-item me-2">
+                                    <a class="nav-link text-light" href="#apropos">À propos</a>
+                                </li>
+                                <li class="nav-item me-2">
+                                    <a class="nav-link text-light" href="#contact">Contact</a>
+                                </li>
+                                
+                            </ul>
                             <div class="d-flex justify-content-end">
-                                <a class="btn btn-outline-success me-2 mx-2" href="login">Connexion</a>
-                                <a class="btn btn-success" href="register">Inscription</a>
+                                <a class="btn btn-outline-light text-light me-2 mx-2" href="login">Connexion</a>
+                                <a class="btn btn-light" href="register">Inscription</a>
                             </div>
                         </div>
                     </div>
