Modification des footers

--- a/FABF/services/templates/index.html
+++ b/FABF/services/templates/index.html
@@ -2,16 +2,14 @@
 {% block title %}Home {% endblock %}
  {% block main %}
 
-  <style>
-        .bg-image {
-            background-image: url(assetts/img/hero-img.png);
-            background-size: cover;
-            background-position: center center;
-        }
-    </style>
+  
 <section id="accueil" class="showcase mb-5 py-5 h-100vh" >
   <div class="row g-0">
-    <div class="col-lg-6  showcase-img bg-image"><img src="assetts/img/hero-img.png" class="img-fluid rounded w-50" alt="Description"/></div>
+    <div class="col-lg-6  my-auto showcase-img ">
+      <p>
+        <img src="assetts/img/hero-img.png" class="img-fluid rounded w-50" alt="Description"/>
+      </p>
+    </div>
     <div class="col-lg-6 my-auto showcase-text text-center small">
         <h2 class="text-success fs-1 fw-bold">Bienvenue sur FABF</h2>
         <p class="lead mb-0 fs-6 ">Nous répondons efficacement aux besoins des forces armées en matière de gestion financière avec notre plateforme spécialisée:
@@ -149,7 +147,7 @@
 
 
 
-<section id="contact" class="contact section-bg text-center py-5">
+<section id="contact" class="contact section-bg text-center bg-body-tertiary py-5">
   <div class="container">
 
     <div class="section-title ">
