--- a/FABF/services/templates/register/index.html
+++ b/FABF/services/templates/register/index.html
@@ -96,7 +96,7 @@
                         <div class="col-12">
                         <button class="btn btn-success w-100" type="submit">Créer un compte</button>
                         </div>
-                        <div class="col-12">
+                        <div class="col-12 text-center">
                         <p class="small mb-0">Avez-vous déjà un compte? <a href="/login" class="text-success">Connectez-vous</a></p>
                         </div>
                     </form>
